<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_edit_word"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        android:title="@string/edit_my_word"/>
    
    <item
        android:id="@+id/menu_filter_vocabulary"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:title="@string/filterVocabulary"/>
    <item
        android:id="@+id/root_menu"
        android:icon="@drawable/ic_overflow"
        app:showAsAction="always"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/menu_change_view"
                app:showAsAction="ifRoom"
                android:title="@string/changeVocabularyView"/>
            <item
                android:id="@+id/menu_delete"
                app:showAsAction="ifRoom"
                android:title="@string/deleteWord"/>
            <item
                android:id="@+id/menu_change_status"
                app:showAsAction="ifRoom"
                android:title="@string/changeStatus"/>
        </menu>
    </item>

</menu>