<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
      
    <item
        android:id="@+id/root_menu"
        android:icon="@drawable/ic_overflow"
        app:showAsAction="always"
        android:title="@string/more"

        android:visible="true">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
        </menu>
    </item>

</menu>