<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/signIn"
            android:textColor="@color/red"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/errorColor"
            android:visibility="gone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_bg"
            android:onClick="onSignIn"
            android:text="@string/signIn"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/inProgress"
            style="@style/GenericProgressIndicatorSmall"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/or" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/category_bg"
            android:onClick="onStartSignUp"
            android:text="@string/signUp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/or" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/category_bg"
            android:onClick="onStartSignInOpenID"
            android:text="@string/signInOpenID"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>